--- a/context/CMakeLists.txt
+++ b/context/CMakeLists.txt
@@ -29,4 +29,9 @@ target_link_libraries(context PUBLIC wheels pthread)
 
 # Architecture compile definitions
 
+if (CONTEXT_EXCEPTIONS)
+    message(STATUS "Capture exceptions context")
+    target_compile_definitions(context PRIVATE exceptions_context)
+endif()
+
 target_compile_definitions(context PUBLIC ${CONTEXT_ARCH})
