--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,11 +1,7 @@
 cmake_minimum_required(VERSION 3.9)
 project(context)
 
-set(CMAKE_CXX_STANDARD 17)
-set(CMAKE_CXX_STANDARD_REQUIRED ON)
-set(CMAKE_CXX_EXTENSIONS OFF)
-
-add_compile_options(-Wall -Wextra -Wpedantic -g -fno-omit-frame-pointer)
+include(cmake/Logging.cmake)
 
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "bin")
 
@@ -15,6 +11,8 @@ add_subdirectory(third_party)
 
 option(CONTEXT_DEVELOPER "Context development mode" OFF)
 option(CONTEXT_EXCEPTIONS "Capture exceptions context" ON)
+
+include(cmake/CompileOptions.cmake)
 
 include(cmake/Platform.cmake)
 include(cmake/Arch.cmake)
