--- a/bench/CMakeLists.txt
+++ b/bench/CMakeLists.txt
@@ -1,4 +1,4 @@
-message(STATUS "Context benchmark")
+ProjectLog("Context benchmark")
 
 add_executable(context_bench main.cpp)
 target_link_libraries(context_bench context wheels)
