--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,4 +1,4 @@
-ProjectLog("Context tests")
+ProjectLog("Tests")
 
 # List sources
 
@@ -6,5 +6,5 @@ file(GLOB TEST_SOURCES "./*.cpp")
 
 # All tests target
 
-add_executable(context_tests ${TEST_SOURCES})
-target_link_libraries(context_tests context wheels)
+add_executable(rails_tests ${TEST_SOURCES})
+target_link_libraries(rails_tests rails wheels)
