--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,7 +7,7 @@ set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "bin")
 
 include(cmake/Sanitize.cmake)
 
-add_subdirectory(third_party)
+# add_subdirectory(third_party)
 
 option(SURE_DEVELOPER "Sure development mode" OFF)
 option(SURE_EXCEPTIONS "Sure exceptions context" ON)
